[package]
name = "natural-gravity-engine"
version = "0.1.0"
authors = ["Andrew Wang <acwangpython@gmail.com>"]
edition = "2018"
license = "LGPL-3.0"

[dependencies]
# Supposed to be 0.15.1 since a fix was made for UIButtons.
amethyst = { git = "https://github.com/amethyst/amethyst", branch = "master" }
log = "0.4.8"

[features]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
